--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "@vueuse/core": "^10.3.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "0.39.3",
