--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@123fang-dnd/core": "workspace:0.0.1",
+    "@123fang-dnd/shared": "workspace:0.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "@vueuse/core": "^10.3.0"
