添加鼠标跟随插件mouseFollow&&完善辅助线插件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,12 @@
       ],
       "@123fang-dnd/shared": [
         "./packages/shared/index.ts"
+      ],
+      "@123fang-dnd/plugin-auxiliary-line": [
+        "./packages/plugins/auxiliaryLine/index.tsx"
+      ],
+      "@123fang-dnd/plugin-mouse-follow": [
+        "./packages/plugins/mouseFollow/index.tsx"
       ]
     }
   },
