fix: 解决workspace子包依赖

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@123fang-dnd/shared": "workspace:0.0.1",
     "@123fang-dnd/plugin-auxiliary-line": "workspace:^0.0.1",
     "@123fang-dnd/plugin-mouse-follow": "workspace:^0.0.1",
+    "@123fang-dnd/plugin-outline": "workspace:^0.0.1",
+    "@123fang-dnd/plugin-sort": "workspace:^",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "@vueuse/core": "^10.3.0"
